[metadata]
version = attr: gruvbox.__version__
license_file = LICENSE

[flake8]
max-line-length = 120

ignore =
	E251   # Pep8 specifies you SHOULD leave space around operators
	E202   # whitespace between var and brackets ) } and ]
	E265   # comments error. way too subjective.
	E266   # too many leading #'s in a comment
	E302   # Guido doesn't even do this.
	E402,  # module level import not at top of file

	F401   # Goes off when setting up user namespace

exclude =

	docs/sphinxext/**,
	docs/_build/**,
	build/**,
	dist/**,
	node_modules/**,
    .tox/**,

[flake8-rst]
exclude =

	docs/sphinxext/**,
	docs/_build/**,
	build/**,
	dist/**,
	node_modules/**,

[bdist_wheel]
universal = 1

[pylint]
exclude = *

[aliases]
dev = build develop
