[metadata]
version = attr: gruvbox.__version__
license_file = LICENSE

[flake8]
max-line-length = 120
jobs=1
extend-ignore =
	# Pep8 specifies you SHOULD leave space around operators
	E251
	# whitespace between var and brackets ) } and ]
	E202
	# comments error. way too subjective.
	E265
	# too many leading #'s in a comment
	E266
	# Guido doesn't even do this.
	E302
	# module level import not at top of file
	E402
	# Goes off when setting up user namespace
	F401

exclude =
	docs/sphinxext/**,
	docs/_build/**,
	build/**,
	dist/**,
	node_modules/**,
    .tox/**,

[flake8-rst]
exclude =

	docs/sphinxext/**,
	docs/_build/**,
	build/**,
	dist/**,
	node_modules/**,

[bdist_wheel]
universal = 1

[pylint]
exclude = *

[aliases]
dev = build develop
